--- a/styles/tailwind.css
+++ b/styles/tailwind.css
@@ -20,3 +20,11 @@ body {
 .foobar div {
   margin: 0;
 }
+
+@layer utilities {
+  @variants responsive {
+    .w-xl {
+      width: 36rem;
+    }
+  }
+}
